yahoo finance - liquidity and moving average
# yfinance 
# Liquidity analysis and Moving Average

# P/E Ratio (trailingPE) - The trailing P/E ratio is calculated by dividing a company's current share price by its earnings per share (EPS) over the past 12 months.
# Company Beta - Beta measures the level of correlation between a stock and the S&P 500 stock index. It is sometimes considered a measure of risk. Higher the Beta, less stable.

# Zalando SE: ZAL.DE, Liquidity Measures
# P/E Ratio: 25
# Company Beta: 1.849
# working_capital = current_assets - current_liabilities = 2.665300e+09
# current_ratio = current_assets / current_liabilities = 1.501128e+00
# quick_ratio = (current_assets - inventory) / current_liabilities = 1.209754e+00
# cash_ratio = (cash_and_equivalents + receivables) / current_liabilities = 5.982213e-01

# Hexagon AB: HEXA-B.ST, Liquidity Measures
# P/E Ratio: 40.857662
# Company Beta: 0.902
# working_capital = current_assets - current_liabilities = 1.119610e+10
# current_ratio = current_assets / current_liabilities = 2.682511e+00
# quick_ratio = (current_assets - inventory) / current_liabilities = 2.592435e+00
# cash_ratio = (cash_and_equivalents + receivables) / current_liabilities = 2.773052e-01

# Stadler Rail AG: SRAIL.SW, Liquidity Measures
# P/E Ratio: 63.677418
# Company Beta: 0.593
# working_capital = current_assets - current_liabilities = 7.740790e+08
# current_ratio = current_assets / current_liabilities = 1.152337e+00
# quick_ratio = (current_assets - inventory) / current_liabilities = 8.255007e-01
# cash_ratio = (cash_and_equivalents + receivables) / current_liabilities = 3.296593e-01

--- a/yfinance.ipynb
+++ b/yfinance.ipynb
@@ -26,6 +26,7 @@
         "\n",
         "# Zalando SE: ZAL.DE, Liquidity Measures\n",
         "# P/E Ratio: 25\n",
+        "# Company Beta: 1.849\n",
         "# working_capital = current_assets - current_liabilities = 2.665300e+09\n",
         "# current_ratio = current_assets / current_liabilities = 1.501128e+00\n",
         "# quick_ratio = (current_assets - inventory) / current_liabilities = 1.209754e+00\n",
@@ -33,6 +34,7 @@
         "\n",
         "# Hexagon AB: HEXA-B.ST, Liquidity Measures\n",
         "# P/E Ratio: 40.857662\n",
+        "# Company Beta: 0.902\n",
         "# working_capital = current_assets - current_liabilities = 1.119610e+10\n",
         "# current_ratio = current_assets / current_liabilities = 2.682511e+00\n",
         "# quick_ratio = (current_assets - inventory) / current_liabilities = 2.592435e+00\n",
@@ -40,6 +42,7 @@
         "\n",
         "# Stadler Rail AG: SRAIL.SW, Liquidity Measures\n",
         "# P/E Ratio: 63.677418\n",
+        "# Company Beta: 0.593\n",
         "# working_capital = current_assets - current_liabilities = 7.740790e+08\n",
         "# current_ratio = current_assets / current_liabilities = 1.152337e+00\n",
         "# quick_ratio = (current_assets - inventory) / current_liabilities = 8.255007e-01\n",
@@ -80,7 +83,7 @@
       "metadata": {
         "id": "XMIpUuPqd-6W"
       },
-      "execution_count": 22,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -97,9 +100,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4c4f9885-0e27-4184-931a-7503409ea2ea"
+        "outputId": "65b17c96-a7d2-41cf-b402-04d0d5376ef9"
       },
-      "execution_count": 23,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,9 +137,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JJPT9SOhfQIO",
-        "outputId": "d25bca85-6692-4206-dc58-833128c24f85"
+        "outputId": "d3c6c2ca-914a-4c7d-ca03-d98595c38460"
       },
-      "execution_count": 25,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,7 +198,7 @@
       "metadata": {
         "id": "2Rje3cNMd--U"
       },
-      "execution_count": 26,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -211,7 +214,7 @@
       "metadata": {
         "id": "i9ZuoibBd_CQ"
       },
-      "execution_count": 27,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -226,7 +229,7 @@
       "metadata": {
         "id": "JkBiB5LXd_Ge"
       },
-      "execution_count": 28,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -248,9 +251,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4j0lFwoRd_n4",
-        "outputId": "9cc9daf4-02eb-4bd6-ddec-a6404c815251"
+        "outputId": "54e729b2-452b-445b-9eb1-01adf8f2e300"
       },
-      "execution_count": 29,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
