Credit Risk - Loans
# LogisticRegression ( Accuracy: 0.8674 Precision of: 0.7638 ) - statistical model that models the log-odds of an event as a linear
# combination of one or more independent variables. Solves classification problems by predicting categorical outcomes, unlike linear
# regression that predicts a continuous outcome. In the simplest case there are two outcomes, which is called binomial, an example of
# which is predicting if a tumor is malignant or benign. Other cases have more than two outcomes to classify, in this case it is called
# multinomial. A common example for multinomial logistic regression would be predicting the class of an iris flower between 3 different
# species.

# RandomForestClassifier ( Accuracy: 0.9294 Precision of: 0.9577 ) -  Random Forest is a method that combines the predictions of multiple
# decision trees to produce a more accurate and stable result.

# SVC ( Accuracy: 0.9079  Precision of: 0.9149 ) - type of Support Vector Machine (SVM) used for classification tasks. SVM is a supervised
# learning model that finds the hyperplane which best separates the data points of different classes in a high-dimensional space.

# KNeighborsClassifier ( Accuracy: 0.8907 Precision of: 0.8489 ) - a most simple but fundamental classifier algorithm in Machine Learning.
# Supervised learning category and used with great intensity for pattern recognition, data mining and analysis of intrusion.

# GradientBoostingClassifier ( Accuracy: 0.9218 Precision of: 0.9267 ) - method that builds a strong predictive model by sequentially
# combining many simple, "weak" models (usually decision trees) to correct errors from previous models, making it excellent for complex
# classification tasks like spam detection or medical diagnosis, known for high accuracy but requiring careful tuning to prevent
# overfitting.

# XGBClassifier ( Accuracy: 0.9308 Precision of: 0.9377) - a highly efficient, popular machine learning algorithm for classi

--- a/Credit_Risk_1.ipynb
+++ b/Credit_Risk_1.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "FCGYFK99VRXh"
       },
@@ -50,7 +50,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "source": [
+        "# Loan Interest Rate - the cost you pay to the lender for borrowing money (loan 9-13%, mortgage 6-7%, ...). Rates vary for cars, homes, or debt consolidation.\n",
+        "# Acceptance Rate\t- the percentage of predictions classified as the positive class (e.g., “accept loan” in credit risk scenarios). It represents how often the model predicts a certain outcome, regardless of whether the prediction is correct. For example, if 30 out of 100 predictions are classified as “accept,” the acceptance rate is 30%.\n",
+        "# Threshold\t- the decision boundary that determines whether a prediction is classified as positive (e.g., loan accepted) or negative (e.g., loan rejected). By default, many models use a threshold of 0.5 (50%), meaning a prediction with a probability above 0.5 is classified as positive.\n",
+        "# Bad Rate - the higher is our acceptance rate, the higher is our Bad Rate ( = risk of bad situation). People that don’t pay their loans are part of the Bad Rate.\n",
+        "# Estimated Value - the total expected value of the accepted loans, taking into account both the loans that will be repaid and the loans that will result in losses due to default.\n",
+        "# Estimated Value = ( Num Accepted Loans x (1- Bad Rate) x Avg Loan Amount ) - (Num Accepted Loans x Bad Rate x Avg Loan Amount)\n",
+        "# Num Accepted Loans: The number of loans accepted based on the Threshold, which is defined based in Acceptance Rate.\n",
+        "# Bad Rate: The proportion of accepted loans that are expected to default (i.e., loans not repaid).\n",
+        "# Avg Loan Amnt: The average amount of money disbursed per loan.\n",
+        "# (1 — Bad Rate): Represents the proportion of loans that are repaid successfully.\n",
+        "# accuracy_score - overall correctness (right predictions / total predictions). Accuracy: (True Positives + True Negatives) / Total Instances.\n",
+        "# precision_score - exactness (how many \"yes\" predictions were actually correct). Precision: True Positives / (True Positives + False Positives).\n",
+        "# Precision (Default) = Precision - How many of the predicted positives are actually positive. Precision can be seen as a measure of quality.\n",
+        "# Precision (Non-Default) = Negative Predictive Value\n",
+        "# Recall (Default) = Sensitivity - How many of the actual positives are correctly identified. Recall is a measure of quantity.\n",
+        "# Recall (Non-Default) = Specificity. Recall (Sensitivity/TPR): True Positives / (True Positives + False Negatives).\n",
+        "# recall_score - completeness (how many actual \"yes\" cases were found), focusing on False Negatives\n",
+        "# f1_score - F1 Score balances Precision and Recall. The harmonic mean of Precision and Recall, providing a balance between the two. A high F1-Score indicates that the model is both accurate (high Precision) and capable of correctly identifying defaults (high Recall).\n",
+        "# macro average Precision = (Precision_A + Precision_B + Precision_C) / 3. (F1 Score(Default)+F1 Score(Non Default))/2.\n",
+        "# roc_auc_score - (Receiver Operating Characteristic Area Under the Curve) is a single number (0 to 1) summarizing a classification model's ability to distinguish between positive and negative classes, representing the probability that the model ranks a random positive example higher than a random negative one. A score of 1.0 is a perfect model, 0.5 is random guessing, and scores above 0.8 (like 0.8-0.9 for excellent, >0.9 for outstanding) indicate good to great performance, though \"good\" varies by field.\n",
+        "# confusion_matrix - a table used to evaluate the performance of a classification model. It compares the predicted labels with the true labels and breaks down the results into four categories\n",
+        "# FP - False Positive - Predicted positive when it is actually negative (Type I error).\n",
+        "# TP - True Positive - Correctly predicted positive cases.\n",
+        "# FN - False Negative - Predicted negative when it is actually positive (Type II error).\n",
+        "# TN - True Negative - Correctly predicted negative cases.\n",
+        "# auc (area under curve) - A scalar value summarizing the ROC Curve. It indicates the overall performance of the model, with values closer to 1 signifying excellent discrimination ability and values near 0.5 suggesting no better-than-random performance.\n",
+        "# roc_curve - (Receiver Operating Characteristic Curve) visualizes the trade-off between sensitivity (true positive rate) and fallout (false positive rate) across different threshold values. It provides insights into a model’s ability to distinguish between classes.\n",
+        "# fallout_list - List to store False Positive Rate (FPR)\n",
+        "# sensitivity_list - List to store True Positive Rate (TPR) for ROC curves\n",
+        "# thresholds_list - List to store threshold values from ROC calculation\n",
+        "# roc_auc_list - List to store AUC ( area under curve) values for each model\n",
+        "# PD (Probability of Default): This represents the probability that a borrower will default on their loan.\n",
+        "# LGD (Loss Given Default): This represents the portion of the loan that would be lost in the event of a default. If no recovery is possible, LGD=1 (100% loss) - Considered here. If some of the loan is recovered, LGD would be less than 1.\n",
+        "# EAD (Exposure at Default): This represents the value of the loan or exposure at the time of default.\n",
+        "# n (Number of Loans): This represents the total number of loans or credit exposures being analyzed."
+      ],
+      "metadata": {
+        "id": "8wLPf28-rZ9M"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "L8iqF6TBxkYm"
       },
@@ -63,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "do5w8zj-xpZA"
       },
@@ -75,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -116,7 +161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -148,7 +193,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -445,7 +490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -774,7 +819,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -806,7 +851,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -829,7 +874,7 @@
       ],
       "source": [
         "# Use Pandas to drop the record from the data frame and create a new one\n",
-        "import matplotlib.colors as mcolors  # Importa a biblioteca de cores\n",
+        "import matplotlib.colors as mcolors\n",
         "data = data.drop(data[data[\"person_age\"] > 100].index)\n",
         "\n",
         "# Create a scatter plot of age and interest rate\n",
@@ -842,7 +887,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "A0eWi5n_m6X2"
       },
@@ -862,7 +907,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1335,7 +1380,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1381,7 +1426,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "id": "08DIvI0ym6hj"
       },
@@ -1405,7 +1450,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "id": "ccuBO9H7m6m-"
       },
@@ -1421,12 +1466,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "id": "6awDiwvIm6si"
       },
       "outputs": [],
       "source": [
+        "# Scalling the model with StandardScaler to reduce computational cost\n",
         "# Scaler for training and test data\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "\n",
@@ -1437,7 +1483,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "id": "073JAwRBxpyR"
       },
@@ -1463,7 +1509,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1489,7 +1535,7 @@
       ],
       "source": [
         "import numpy as np\n",
-        "# --- First General Avaliation of the Models ---\n",
+        "\n",
         "# Loop to fit, predict and evaluate all different models:\n",
         "\n",
         "for clf in (log_clf, rnd_clf, svm_clf, gnb_clf, knn_clf, grd_clf, xgb_clf, voting_clf):\n",
@@ -1500,7 +1546,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1702,10 +1748,11 @@
         "    # Store the probabilities in a consolidated DataFrame\n",
         "    preds_df_all[f\"prob_default {model_name_list[idx]}\"] = preds_df['prob_default']  # Add current model's probabilities to `preds_df_all`\n",
         "\n",
-        "    # --- Assign loan status based on a threshold ---\n",
+        "    # Assign loan status based on a threshold\n",
         "\n",
+        "    # The threshold (i.e., the limit that determines whether a predicted class is considered 1 or 0) is initially set to 0.5 (50%). This is a critical parameter because it significantly influences subsequent analyses.\n",
         "    # Define a decision threshold\n",
-        "    threshold = 0.5  # Default threshold of 0.5 to classify positive vs negative\n",
+        "    threshold = 0.5  # threshold limit to optimize model performance\n",
         "\n",
         "    # Assign loan status (predicted class) based on the threshold\n",
         "    preds_df[\"loan_status\"] = preds_df[\"prob_default\"].apply(lambda x: 1 if x > threshold else 0)  # Binary classification\n",
@@ -1716,7 +1763,7 @@
         "    # Print the count of each loan status (0 = non-default, 1 = default)\n",
         "    print(preds_df[\"loan_status\"].value_counts())  # Display class distribution for predicted values\n",
         "\n",
-        "    # --- Classification Report ---\n",
+        "    # Classification Report\n",
         "\n",
         "    # Generate and print the classification report\n",
         "    print(f\"The Report from {model_name_list[idx]}:\")\n",
@@ -1727,7 +1774,7 @@
         "    print(f\"The {model_name_list[idx]} has an Accuracy: {accuracy_score(y_test, preds_df['loan_status']):.4f}, \"\n",
         "          f\"and a Precision of: {precision_score(y_test, preds_df['loan_status']):.4f}\")\n",
         "\n",
-        "    # --- Confusion Matrix ---\n",
+        "    # Confusion Matrix\n",
         "\n",
         "    # Compute the confusion matrix\n",
         "    cm = confusion_matrix(y_test, preds_df['loan_status'])  # Confusion matrix: actual vs predicted values\n",
@@ -1739,7 +1786,7 @@
         "    display_cm.plot(cmap=plt.cm.Greys)  # Plot the confusion matrix\n",
         "    plt.show()  # Show the plot\n",
         "\n",
-        "    # --- ROC Curve and AUC ---\n",
+        "    # ROC Curve and AUC\n",
         "\n",
         "    # Evaluate the model using ROC-AUC\n",
         "    prob_default = preds[:, 1]  # Extract probabilities of the positive class\n",
@@ -1754,12 +1801,12 @@
         "    fallout_list.append(fallout)  # Store FPR values\n",
         "    sensitivity_list.append(sensitivity)  # Store TPR values\n",
         "    thresholds_list.append(thresholds)  # Store thresholds\n",
-        "    roc_auc_list.append(roc_auc)  # Store AUC scoreDiving Dipe into the Analysis:"
+        "    roc_auc_list.append(roc_auc)  # Store AUC scoreDiving Dipe into the Analysis"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1783,9 +1830,9 @@
       "source": [
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# --- Plot the ROC Curve for all models with improvements:\n",
+        "# Plot the ROC Curve for all models with improvements:\n",
         "\n",
-        "# Set the figure size for better clarity\n",
+        "\n",
         "plt.figure(figsize=(12, 8))\n",
         "\n",
         "# Plot each model's ROC curve\n",
@@ -1797,27 +1844,19 @@
         "# Plot the diagonal line (random model)\n",
         "plt.plot([0, 1], [0, 1], linestyle='--', color='gray', label='Random Classifier', linewidth=1.5)\n",
         "\n",
-        "# Add title and labels with larger fonts for better visibility\n",
+        "\n",
         "plt.title(\"ROC Curve Comparison for Different Models\", fontsize=18, fontweight='bold')\n",
         "plt.xlabel('Fall-out (False Positive Rate)', fontsize=14)\n",
         "plt.ylabel('Sensitivity (True Positive Rate)', fontsize=14)\n",
-        "\n",
-        "# Add grid lines for easier interpretation of the graph\n",
         "plt.grid(True)\n",
-        "\n",
-        "# Add a legend with a cleaner font size and position it better\n",
         "plt.legend(loc='lower right', fontsize=12)\n",
-        "\n",
-        "# Tight layout for better spacing\n",
         "plt.tight_layout()\n",
-        "\n",
-        "# Display the plot\n",
         "plt.show()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1852,7 +1891,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "SByiBrwFiNGk",
         "colab": {
@@ -1889,7 +1928,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "AbNJ_HpciNNv"
       },
@@ -1955,7 +1994,7 @@
         "id": "S9U9_RMXqrsk",
         "outputId": "f48d7061-df9f-4987-e4c0-915d2a70e829"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2541,7 +2580,7 @@
         "id": "X7TfhtLFqr0a",
         "outputId": "3213f1ac-3fca-4edc-9404-1db05e253e7b"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2602,7 +2641,7 @@
         "id": "m4j1_edLqr7L",
         "outputId": "ef767817-6fd3-4801-fd7f-a2f1b3748242"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2633,7 +2672,7 @@
         "id": "SVqavrbYrlfc",
         "outputId": "36d585c7-d37b-4872-e8eb-f6d401583d8f"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3054,7 +3093,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Calculate the total expected loss to two decimal places\n",
+        "# Calculate the total expected loss ( an estimate of the expected monetary loss for the lender due to defaults across the entire portfolio)\n",
+        "# Total Expected Loss = PD + LGD + EAD for all the individual loans in the entire portfolio\n",
         "tot_exp_loss = round(np.sum(test_pred_df['expected_loss']), 2)\n",
         "\n",
         "# Print the total expected loss\n",
@@ -3067,7 +3107,7 @@
         "id": "lASsEol1rlpk",
         "outputId": "5a99cfb7-a72e-4121-ad4e-fbfed531a9a4"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3086,7 +3126,6 @@
       },
       "outputs": [],
       "source": [
-        "# https://medium.com/@danrlei.diegues_91903/credit-risk-modeling-in-python-e9b2379ebeb0\n",
         "# https://www.geeksforgeeks.org/machine-learning/understanding-scikit-learns-svc-decision-function-and-predict/\n",
         "# https://www.geeksforgeeks.org/machine-learning/ml-implementation-of-knn-classifier-using-sklearn/\n",
         "# https://www.geeksforgeeks.org/machine-learning/ml-gradient-boosting/\n",
